tests/compile_fail/display/legacy_bound_syntax.stderr
error: legacy syntax, use `bound(String: std::fmt::Display)` instead
 --> tests/compile_fail/display/legacy_bound_syntax.rs:2:11
  |
2 | #[display(bound = "String: std::fmt::Display")]
  |           ^^^^^
